--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ Diff_editor/.settings
 Diff_editor/target
 Diff_editor/.classpath
 Diff_editor/.project
+Diff_editor/src/main/resources/config.properties
