--- a/Diff_editor/src/main/webapp/WEB-INF/web.xml
+++ b/Diff_editor/src/main/webapp/WEB-INF/web.xml
@@ -9,10 +9,19 @@
     <servlet-name>ServletMain</servlet-name>
     <servlet-class>edu.fdu.se.web.astdiff.FileServlet</servlet-class>
   </servlet>
-
+	
+	<servlet>
+    <servlet-name>ProxyServlet</servlet-name>
+    <servlet-class>edu.fdu.se.web.astdiff.ProxyServlet</servlet-class>
+  </servlet>
   <servlet-mapping>
     <servlet-name>ServletMain</servlet-name>
     <url-pattern>/getfile</url-pattern>
+  </servlet-mapping>
+  
+  <servlet-mapping>
+    <servlet-name>ProxyServlet</servlet-name>
+    <url-pattern>/getfiles</url-pattern>
   </servlet-mapping>
 </web-app>
 
