--- a/Diff_editor/src/main/webapp/WEB-INF/web.xml
+++ b/Diff_editor/src/main/webapp/WEB-INF/web.xml
@@ -1,28 +1,48 @@
-<!DOCTYPE web-app PUBLIC
- "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
- "http://java.sun.com/dtd/web-app_2_3.dtd" >
+<?xml version="1.0" encoding="UTF-8"?>
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xmlns="http://java.sun.com/xml/ns/javaee"
+         xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
+         id="WebApp_ID" version="3.0">
+    <display-name>Archetype Created Web Application</display-name>
 
-<web-app>
-  <display-name>Archetype Created Web Application</display-name>
-  
-  <servlet>
-    <servlet-name>ServletMain</servlet-name>
-    <servlet-class>edu.fdu.se.web.astdiff.FileServlet</servlet-class>
-  </servlet>
-	
-	<servlet>
-    <servlet-name>ProxyServlet</servlet-name>
-    <servlet-class>edu.fdu.se.web.astdiff.ProxyServlet</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>ServletMain</servlet-name>
-    <url-pattern>/getfile</url-pattern>
-  </servlet-mapping>
-  
-  <servlet-mapping>
-    <servlet-name>ProxyServlet</servlet-name>
-    <url-pattern>/getfiles</url-pattern>
-  </servlet-mapping>
+    <servlet>
+        <servlet-name>ServletMain</servlet-name>
+        <servlet-class>edu.fdu.se.web.astdiff.FileServlet</servlet-class>
+    </servlet>
+
+    <servlet>
+        <servlet-name>ProxyServlet</servlet-name>
+        <servlet-class>edu.fdu.se.web.astdiff.ProxyServlet</servlet-class>
+    </servlet>
+
+    <servlet>
+        <servlet-name>TestServlet</servlet-name>
+        <servlet-class>edu.fdu.se.web.astdiff.TestServlet</servlet-class>
+    </servlet>
+
+    <!--<servlet>-->
+    <!--<servlet-name>TestServlet</servlet-name>-->
+    <!--<servlet-class>edu.fdu.se.web.astdiff.TestServlet</servlet-class>-->
+    <!--</servlet>-->
+    <servlet-mapping>
+        <servlet-name>ServletMain</servlet-name>
+        <url-pattern>/getfile</url-pattern>
+    </servlet-mapping>
+
+    <servlet-mapping>
+        <servlet-name>ProxyServlet</servlet-name>
+        <url-pattern>/getfiles</url-pattern>
+    </servlet-mapping>
+
+    <servlet-mapping>
+        <servlet-name>TestServlet</servlet-name>
+        <url-pattern>/TestServlet/</url-pattern>
+    </servlet-mapping>
+
+    <!--<servlet-mapping>-->
+    <!--<servlet-name>TestServlet</servlet-name>-->
+    <!--<url-pattern>/</url-pattern>-->
+    <!--</servlet-mapping>-->
 </web-app>
 
 
