--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
-Diff_editor/.settings
-Diff_editor/target
-Diff_editor/.classpath
-Diff_editor/.project
-Diff_editor/src/main/resources/config.properties
-Diff_editor/.idea
+.settings/
+target/
+.classpath
+.project
+src/main/resources/config.properties
 .idea
+*.iml
