--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,14 @@
     	<version>2.4</version>
     	<classifier>jdk13</classifier>
     </dependency>
+      <!-- https://mvnrepository.com/artifact/javax.servlet/javax.servlet-api -->
+      <dependency>
+          <groupId>javax.servlet</groupId>
+          <artifactId>javax.servlet-api</artifactId>
+          <version>3.1.0</version>
+          <scope>provided</scope>
+      </dependency>
+
   </dependencies>
   <build>
     <finalName>Diff_editor</finalName>
