--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,11 @@
   <version>0.0.1-SNAPSHOT</version>
   <name>CLDIFF-WEB Maven Webapp</name>
   <url>http://maven.apache.org</url>
+  <properties>
+      <project.build.sourceEncoding>
+            UTF-8
+      </project.build.sourceEncoding>
+  </properties>
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
