--- a/src/main/webapp/package.json
+++ b/src/main/webapp/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
-    "monaco-editor": "^0.18.1",
-    "monaco": "^1.201704190613.0"
+    "monaco-editor": "^0.18.1"
   },
   "devDependencies": {},
   "scripts": {
