--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,13 @@
           <version>3.1.0</version>
           <scope>provided</scope>
       </dependency>
+      <!-- https://mvnrepository.com/artifact/org.apache.httpcomponents/httpclient -->
+      <dependency>
+          <groupId>org.apache.httpcomponents</groupId>
+          <artifactId>httpclient</artifactId>
+          <version>4.5.10</version>
+      </dependency>
+
 
   </dependencies>
   <build>
