--- a/src/main/webapp/package.json
+++ b/src/main/webapp/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
-    "monaco-editor": "^0.18.1"
+    "bootstrap": "^4.4.1",
+    "jquery": "^3.4.1",
+    "monaco-editor": "^0.18.1",
+    "popper.js": "^1.16.0"
   },
   "devDependencies": {},
   "scripts": {
