--- a/pom.xml
+++ b/pom.xml
@@ -56,7 +56,7 @@
           <groupId>javax.servlet</groupId>
           <artifactId>javax.servlet-api</artifactId>
           <version>3.1.0</version>
-          <scope>provided</scope>
+          <!--<scope>provided</scope>-->
       </dependency>
       <!-- https://mvnrepository.com/artifact/org.apache.httpcomponents/httpclient -->
       <dependency>
@@ -68,7 +68,7 @@
 
   </dependencies>
   <build>
-    <finalName>CLDIFF-WEB</finalName>
+    <finalName>CodeUnderstanding</finalName>
       <plugins>
           <plugin>
               <groupId>org.apache.maven.plugins</groupId>
