--- a/pom.xml
+++ b/pom.xml
@@ -58,14 +58,21 @@
           <version>3.1.0</version>
           <scope>provided</scope>
       </dependency>
+      
 
   </dependencies>
   <build>
     <finalName>CLDIFF-WEB</finalName>
       <plugins>
           <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-war-plugin</artifactId>
+            <version>3.3.1</version>
+          </plugin>
+          <plugin>
               <groupId>org.apache.maven.plugins</groupId>
               <artifactId>maven-compiler-plugin</artifactId>
+              <version>3.8.1</version>
               <configuration>
                   <source>8</source>
                   <target>8</target>
