--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,11 @@
     <finalName>CodeUnderstanding</finalName>
       <plugins>
           <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-war-plugin</artifactId>
+          <version>3.3.1</version>
+        </plugin>
+          <plugin>
               <groupId>org.apache.maven.plugins</groupId>
               <artifactId>maven-compiler-plugin</artifactId>
               <configuration>
